Fixed nav bar on mobile

--- a/_sass/components/nav.sass
+++ b/_sass/components/nav.sass
@@ -28,7 +28,6 @@ $nav-padding: 1px 0
         justify-content: center
 
         @media #{$mobile}
-            flex-direction: column
             padding: 8px 0
             font-size: 1.1rem
 
